[gd_scene load_steps=4 format=2]

[ext_resource path="res://effects/target_area.tscn" type="PackedScene" id=1]
[ext_resource path="res://world_objects/gameplay_objects/unload_area.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.89424, 1, 3.15488 )

[node name="Unload" type="Spatial"]
script = ExtResource( 2 )

[node name="TargetArea" parent="." instance=ExtResource( 1 )]

[node name="Area" type="Area" parent="."]
transform = Transform( 15, 0, 0, 0, 15.7195, 0, 0, 0, 15, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.0666667, 0, 0, 0, 0.333333, 0, 0, 0, 0.0666667, 0, 0, 0 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
